force-app/main/default/objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Check_In__c</fullName>
        <label>Check-In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_out__c</fullName>
        <label>Check-out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guest</label>
        <referenceTo>Guest__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Check_In__c</columns>
        <columns>Check_out__c</columns>
        <columns>Room__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Booking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>